# admin

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  readme.md  run.sh
backend/: Cargo.toml  classroom.db  log4rs.yaml  participants.csv
backend/src/: lib.rs  main.rs  utilll.rs
backend/src/alpha/: dbsave.rs  migrate.rs
backend/src/database/: migrate.rs  mod.rs  operations.rs
backend/src/handlers/: auth.rs  mod.rs  universal.rs
backend/src/handlers/students/: basic_crud.rs  individual.rs  mod.rs  reports.rs  weekly_data.rs
backend/src/migrate/: classroom.rs  migrate.rs
backend/src/script/: migrate.rs
backend/src/utils/: backup.rs  classroom.rs  constants.rs  csv_dump.rs  dbsave.rs  discord_auth.rs  discord_participant_auth.rs  discord_ta_auth.rs  mod.rs  structs.rs  types.rs
backend/tests/: integration_tests.rs
frontend/: .env.example  package-lock.json  package.json
frontend/src/: CohortSelection.tsx  Login.tsx  StudentsPage.tsx  TableView.tsx  main.tsx
frontend/src/components/: CohortCard.tsx  DataTable.tsx  ProtectedRoute.tsx
frontend/src/components/student/: StudentSummary.tsx  WeeklyBreakdownCard.tsx  (+1 more)
frontend/src/pages/: CohortSelection.tsx  Feedback.tsx  Login.tsx  ResultPage.tsx  StudentDetailPage.tsx  TableView.tsx
frontend/src/services/: auth.ts  studentService.ts
frontend/src/types/: student.ts
frontend/src/utils/: calculations.ts  studentUtils.ts
script/: script1.py  script3.py
src/: CohortSelection.tsx  Login.tsx  ResultPage.tsx  StudentsPage.tsx  TableView.tsx  main.tsx
(+8 files in other folders)
