[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "migrate"
path = "src/script/migrate.rs"

[dependencies]
log = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
actix-cors = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.1" 
rand = "0.8"
dotenv = "0.15.0"
octocrab="0.44.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
chrono="0.4.41"
glob="0.3.2"
log4rs = "1.3.0"
reqwest = { version = "0.11", features = ["json"] }
